veriler geri getirildi