@@ -11,27 +11,25 @@ public class RolesPage {
 
     private final By collapseMenuIcon = By.cssSelector("svg.icon.icon-xl.fw-bolder[alt='Collapse']");
     private final By rolesMenuLink = By.xpath("//a[contains(., 'Roles')]");
-    private final By rolesList = By.cssSelector("button.btn.btn-light.border.w-100.mw-100.text-start");
+    private final By rolesList = By.xpath("//button[contains(@class, 'btn') and contains(text(), '')]");
+    //button[contains(@class, 'btn') and contains(@class, 'text-start') and normalize-space(string()) != '']
+    //button[contains(@class, 'btn') and contains(text(), '')]
     private final By breadcrumbRoleDetail = By.xpath("//li[@class='breadcrumb-item active' and text()='Role Detail']");
     private final By permissionsLabels = By.xpath("//label[contains(@class, 'btn') and contains(@class, 'btn-outline-secondary')]");
 
-    /*
-    public RolesPage collapseMenuIfExpanded() {
+    public void collapseMenuIfExpanded() {
         List<WebElement> collapseIcons = ReusableMethods.visibilityOfElementsByWebDriverWait(collapseMenuIcon);
         if (!collapseIcons.isEmpty()) {
-            collapseIcons.get(0).click();
+            collapseIcons.getFirst().click();
         }
-        return this;
-    }*/
+    }
 
-    public RolesPage navigateToRolesPage() {
-        ReusableMethods.waitForSeconds(2);
+    public void navigateToRolesPage() {
         ReusableMethods.clickElementByWebDriverWait(rolesMenuLink).click();
-        return this;
+        ReusableMethods.waitForSeconds(1);
     }
 
     public List<String> getAllRoles() {
-        ReusableMethods.waitForSeconds(2);
         List<WebElement> roles = ReusableMethods.visibilityOfElementsByWebDriverWait(rolesList);
         return roles.stream()
                 .map(WebElement::getText)
@@ -54,14 +52,14 @@ public class RolesPage {
         return false;
     }
 
-    public RolesPage clickRoleByName(String roleName) {
+    public void clickRoleByName(String roleName) {
         ReusableMethods.waitForSeconds(2);
         List<WebElement> roles = ReusableMethods.visibilityOfElementsByWebDriverWait(rolesList);
         for (WebElement role : roles) {
             if (role.getText().trim().equalsIgnoreCase(roleName)) {
-                ReusableMethods.waitForSeconds(1);
+                ReusableMethods.waitForSeconds(1); // stabilizasyon için
                 role.click();
-                return this;
+                return;
             }
         }
         throw new RuntimeException("Role not found to click: " + roleName);
@@ -69,7 +67,7 @@ public class RolesPage {
 
     public boolean isRoleDetailPageVisible() {
         List<WebElement> breadcrumb = ReusableMethods.visibilityOfElementsByWebDriverWait(breadcrumbRoleDetail);
-        return !breadcrumb.isEmpty() && breadcrumb.get(0).isDisplayed();
+        return !breadcrumb.isEmpty() && breadcrumb.getFirst().isDisplayed();
     }
 
     public List<String> getAllPermissionsForSelectedRole() {
